[package]
name = "nickel_app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nickel = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "1.4.7", features = ["postgres"] }
dotenv = "0.15.0"
nickel-diesel = "*"